--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,11 +1,11 @@
-$color1: #DBDBDB;
+$fuente1: 'Bebas Neue', cursive;
+$fuente2: 'Phudu', cursive;
+$color1: grey;
 $color2: beige;
-$color3: gray;
-$color4: grey;
-$color5: blanchedalmond;
-$color6: darkgray;
-$color7: darkgrey;
-$color8: darkred;
-$font-family: 'Roboto', sans-serif;
-$background-color1: black;
-$background-color2: darkgrey;
+$color3: darkgrey;
+$color4: black;
+$color5: red;
+$color6: darkred;
+$color7: #DBDBDB;
+$fondocolor1: black;
+$fondocolor2: darkgrey;
