--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,10 @@
-@import "variables", "fuentes", "base", "inicio", "fotos", "musica", "videos", "contacto", "footer", "mediaq";
+@import "fuentes";
+@import "variables";
+@import "bases";
+@import "inicio";
+@import "footer";
+@import "fotos";
+@import "musica";
+@import "videos";
+@import "mediaq"; 
+@import "contacto";
