--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,25 +1,19 @@
-/*MIXIN*/
-@mixin anclas {
-    text-decoration: none;
-	color: $color4;
+.pieDePag {
+    background-color: $fondocolor1;
+    color: $color2;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 10vh;
+    font-family: $fuente1;
+    text-align: center;
 }
 
-
-.piedepagInicio {
-	color: $color3;
-	grid-area: pie;
-	background-color: $background-color1;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	padding: 10px;
-	height: 60px;
+.enlacePie {
+    color: $color2;
+    padding-bottom: 5rem;
 }
-.enlacepie {
-	@include anclas;
+
+.pie {
+    margin-top: 3px;
 }
