--- a/scss/_fotos.scss
+++ b/scss/_fotos.scss
@@ -1,21 +1,21 @@
-.carrousel {
-	margin-top: 2%;
-	margin-left: 20%;
-	margin-right: 20%;
-	margin-bottom: 10%;
+.paginaFotos {
+    background-color: $fondocolor1;
 }
+
 .tituloFotos {
-	background: linear-gradient(to right, #200122, #6f0000);
-	color: $color1;
-	opacity: 30%;
-	padding-left: 5%;
-	font-family: $font-family;
-	font-weight: bold;
+    font-family: $fuente1;
+    color: $color1;
+    padding-left: 5%;
 }
-.seccionFotos {
-	background: black;
+
+.carrousel {
+    margin-top: 2%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 10%;
 }
+
 #carouselExampleFade {
-	grid-area: fotos;
-	margin-bottom: 40px;
+    grid-area: fotos;
+    margin-bottom: 40px;
 }
