--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -1,1 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import "https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Phudu:wght@300&display=swap";
