--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,50 +1,41 @@
-.navbar {
-	background-color: $background-color1;
-	opacity: 60%;
-	grid-area: nav;
+#seccionLogo {
+    background-image: url(../img/bandaensayoinstr.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: grayscale(5%);
 }
-.paginaDeInicio {
-	background-image: url(../img/bandaensayoinstr.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	width: 100%;
-	height: 100vh;
-	filter: grayscale(5%);
-}
-.navbar-nav {
-	.nav-link {
-		color: $color1;
-	}
-}
-.logoinicio {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 500px;
-	height: 450px;
-	object-fit: contain;
-	max-width: 100%;
-	height: auto;
-	&:hover {
-		transform: scale(1.1, 1.1);
-		transition: all 1s;
-	}
-}
+
 .centroLogo {
-	grid-area: logo;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	justify-content: center;
-	justify-content: space-around;
+    img {
+        width: 600px;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+    }
+
+    &:hover {
+        transform: scale(1.1, 1.1);
+        transition: all 1s;
+    }
 }
-.descrip {
-	text-align: center;
-	margin-top: 65px;
-	margin-left: 5%;
-	margin-right: 5%;
-	background-color: $background-color1;
-	opacity: 50%;
-	color: $color2;
+
+#seccionDescripcion {
+    background: linear-gradient(to top, black, #1e130c);
+    height: auto;
+    padding: 50px;
+}
+
+.descripcion {
+    max-width: 800px;
+    margin: 0 auto;
+    color: $color1;
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: $fuente2;
+    padding-bottom: 50px;
 }
