--- a/scss/_mediaq.scss
+++ b/scss/_mediaq.scss
@@ -1,20 +1,74 @@
-@media (min-width: 600px) {
-    .logoinicio {
-        max-width: 50%;
+@media screen and (max-width: 768px) {
+    #seccionLogo {
+        height: 50vh;
+    }
+
+    .centroLogo {
+        img {
+            width: 200px;
+        }
+    }
+
+    #seccionDescripcion {
+        padding: 20px 0;
+    }
+
+    .descripcion {
+        font-size: 1rem;
+    }
+
+    footer {
+        height: 30px;
+
+        p {
+            font-size: 0.6rem;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .padreVideo {
+        padding: 10px;
+    }
+
+    .videosTitulo {
+        font-size: 1.5em;
+        font-weight: bolder;
+        background: linear-gradient(to right, #200122, #6f0000);
+        text-transform: uppercase;
+        color: $color7;
+        opacity: 30%;
+        padding-left: 5%;
+        font-family: $fuente1;
+        font-weight: bolder;
+    }
+
+    .videosDescrip {
+        font-size: 1em;
+    }
+
+    .videos {
+        ul {
+            list-style: none;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        li {
+            width: 45%;
+        }
+    }
+
+    iframe {
+        width: 100%;
+        height: auto;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .piedepagInicio {
-        font-size: 14px;
-        position: static;
-        font-size: 12px;
-        padding: 5px;
-    }
-
     .paginacontacto {
         background-size: cover;
-        background-color: $background-color1;
+        background-color: $fondocolor1;
     }
 }
 
@@ -51,66 +105,5 @@
         display: block;
         margin: 70px 180px auto 0;
         object-fit: contain;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .padreVideo {
-        padding: 10px;
-    }
-
-    .videostitulo {
-        font-size: 1.5em;
-        font-weight: bolder;
-        background: linear-gradient(to right, #200122, #6f0000);
-        text-transform: uppercase;
-        color: $color1;
-        opacity: 30%;
-        padding-left: 5%;
-        font-family: $font-family;
-        font-weight: bolder;
-    }
-
-    .videosdescrip {
-        font-size: 1em;
-    }
-
-    .videos {
-        li {
-            width: 100%;
-        }
-    }
-
-    iframe {
-        width: 100%;
-        height: auto;
-    }
-}
-
-@media only screen and (min-width: 600px) {
-    .padreVideo {
-        padding: 50px;
-    }
-
-    .videostitulo {
-        font-size: 3em;
-    }
-
-    .videosdescrip {
-        font-size: 1.5em;
-    }
-
-    .videos {
-        li {
-            width: 50%;
-            float: left;
-            display: flex;
-            justify-content: space-between;
-        }
-    }
-
-    iframe {
-        width: 100%;
-        height: 315px;
     }
 }
